WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
CLOSED FIXED
38456
[Qt] QtTestBrowser does not support websites which requires HTTP Authentication via dialogs
https://bugs.webkit.org/show_bug.cgi?id=38456
Summary
[Qt] QtTestBrowser does not support websites which requires HTTP Authenticati...
Markus Goetz
Reported
2010-05-03 05:55:08 PDT
Tested with current Qt 4.6 and webkit trunk. Some SSL websites work, some report handshake failed. HTTP auth does not work at all.
Attachments
Patch
(4.27 KB, patch)
2010-05-19 11:14 PDT
,
Diego Gonzalez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jesus Sanchez-Palencia
Comment 1
2010-05-12 12:50:57 PDT
***
Bug 38748
has been marked as a duplicate of this bug. ***
Diego Gonzalez
Comment 2
2010-05-17 12:23:47 PDT
Do you have some list of sites which fails and which not fails? I cannot reproduce it on Linux
Diego Gonzalez
Comment 3
2010-05-17 13:32:20 PDT
Does in your test pages is required any authentication dialog?
Diego Gonzalez
Comment 4
2010-05-18 12:27:39 PDT
Is necessary to implement these kind of dialog in QtTestBrowser? We have this in other Qt based browsers, e.g. Arora. so, is possible this kind of authentication working.
Diego Gonzalez
Comment 5
2010-05-19 11:14:16 PDT
Created
attachment 56502
[details]
Patch
Kenneth Rohde Christiansen
Comment 6
2010-05-19 11:27:35 PDT
Comment on
attachment 56502
[details]
Patch LGTM, though it might make more sense implementing the dialog on the view site and just call that from the WebPage.
WebKit Commit Bot
Comment 7
2010-05-20 19:02:43 PDT
Comment on
attachment 56502
[details]
Patch Clearing flags on attachment: 56502 Committed
r59896
: <
http://trac.webkit.org/changeset/59896
>
WebKit Commit Bot
Comment 8
2010-05-20 19:02:51 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 9
2010-05-20 19:35:31 PDT
http://trac.webkit.org/changeset/59896
might have broken SnowLeopard Intel Release (Tests)
Simon Hausmann
Comment 10
2010-05-21 01:18:41 PDT
Including in the release branch to make QA's life easier
Simon Hausmann
Comment 11
2010-05-21 01:19:50 PDT
Revision
r59896
cherry-picked into qtwebkit-2.0 with commit 1242653b36579fa8c05175424c6e7af9cbec12bd
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug