2010-05-20  Diego Gonzalez  <diegohcg@webkit.org>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] QtTestBrowser does not support websites which requires HTTP Authentication via dialogs
        https://bugs.webkit.org/show_bug.cgi?id=38456

        * QtTestBrowser/webpage.cpp:
        (WebPage::WebPage):
        (WebPage::authenticationRequired):
        * QtTestBrowser/webpage.h:

Canonical link: https://commits.webkit.org/50989@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59896 268f45cc-cd09-0410-ab3c-d52691b4dbfc